# SOSRWIS

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
assets/models/bench/: license.txt  scene.gltf
assets/models/bus/: license.txt  scene.gltf
assets/models/christmas_tree/: license.txt  scene.gltf
assets/models/figure2/: license.txt  scene.gltf
assets/models/garden_fairy/: license.txt  scene.gltf
assets/models/house/: house.mtl
assets/models/lowpoly_snow_house/: license.txt  scene.gltf
assets/models/mailbox/: license.txt  scene.gltf
assets/models/newtrees/: newtrees.gltf  scene.gltf
assets/models/old_well/: license.txt  scene.gltf
assets/models/resleriana/: license.txt  scene.gltf
assets/models/rusty_container/: license.txt  scene.gltf
assets/models/snow_bench/: license.txt  scene.gltf
assets/models/snow_dragon/: scene.gltf
assets/models/snow_floor/: license.txt  scene.gltf
assets/models/snowy_wooden_hut/: license.txt  scene.gltf
assets/models/street_lamp/: license.txt  scene.gltf
assets/shaders/: basic.frag  basic.vert  particle.frag  particle.vert  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert  sun.frag  sun.vert
src/: CMakeLists.txt  example.cpp  stb_impl.cpp
src/Core/: Camera.cpp  Camera.h  Collision.h  Shader.cpp  Shader.h
src/Renderer/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h
src/Scene/: ParticleSystem.cpp  ParticleSystem.h  Scene.cpp  Scene.h  SunSystem.cpp  SunSystem.h
